<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/yang" />


        <TextView
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pic"
            android:layout_centerHorizontal="true"
            android:background="@color/opposite"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/address"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/phone"
                android:textColor="@color/opposite" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/web"
                android:textColor="@color/opposite" />
        </LinearLayout>

        <TextView
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row2"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/disc"
            android:textColor="@color/opposite" />

        <TextView
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row3"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/hours"
            android:textColor="@color/opposite" />

        <Button
            android:id="@+id/emailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/row4"
            android:layout_centerInParent="true"
            android:text="@string/email"
            android:background="@color/colorAccent"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>
</ScrollView>